more ignite impl